...
      await db.execute(
        'CREATE TABLE journaltag (entryID INTEGER NOT NULL, tagID INTEGER NOT NULL, PRIMARY KEY (entryID, tagID), FOREIGN KEY(tagID) REFERENCES tag(id), FOREIGN KEY(entryID) REFERENCES journal(id))',
      );

      // tag examples
      await db.execute(
        "INSERT INTO tag (id, name, color) VALUES (1, 'mindfulness', 4283215696)",
      );
      await db.execute(
        "INSERT INTO tag (id, name, color) VALUES (2, 'breathing', 4278221563)",
      );
      await db.execute(
        "INSERT INTO tag (id, name, color) VALUES (3, 'stress', 4294901760)",
      );
      await db.execute(
        "INSERT INTO tag (id, name, color) VALUES (4, 'anxiety', 4294967040)",
      );
      await db.execute(
        "INSERT INTO tag (id, name, color) VALUES (5, 'self-care', 4289429645)",
      );

      // task examples
      await db.execute(
        "INSERT INTO task (id, name, description, task) VALUES (1, 'Journal', 'Write a short journal entry', 'Spend 5-10 minutes writing about your day or feelings.')",
      );
      await db.execute(
        "INSERT INTO task (id, name, description, task) VALUES (2, 'Say something kind', 'Say something kind to yourself out loud', 'Say: \"I am doing my best\" or another kind phrase.')",
      );
      await db.execute(
        "INSERT INTO task (id, name, description, task) VALUES (3, 'Take a walk', 'Step outside for a short walk', 'Walk for 5-15 minutes in a safe and calming environment.')",
      );
      await db.execute(
        "INSERT INTO task (id, name, description, task) VALUES (4, 'Drink water', 'Hydrate', 'Slowly drink a glass of water to fuel your body.')",
      );

      // breathing exercise examples
      await db.execute(
        "INSERT INTO breathing (id, name, countIn, holdIn, countOut, holdOut, reps) VALUES (1, 'Square breathing', 4, 4, 4, 4, 6)",
      );
...
