...
                return 'Please give a name';
              }
              return null;
            },
          ),
          ListTile(
            title: const Text('Set Tag Color'),
            leading: ValueListenableBuilder<Color>(
              valueListenable: colorController,
              builder: (context, value, _) => SizedBox(
                width: 24,
                height: double.infinity,
                child: DecoratedBox(decoration: BoxDecoration(color: value)),
...
