...
                ),
            ],
          ),
        ),
        actions: [
          TextButton(
            child: const Text('Done!'),
            onPressed: () => Navigator.of(dialogContext).pop(),
          ),
        ],
      );
    },
  );
...
